css/main.css
/* ... */
ul, 
ol {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

a {
  color: #e2e3ed;
  text-decoration: none;
}

h2 {
  font-family: 'Poppins', sans-serif;
  font-size: 1.875em;
  font-weight: 500;
}

h3,
h4 {
  font-family: 'Poppins', sans-serif;
  font-size: 1.125em;
  font-weight: 500;
  margin: 20px 0;
}

p {
  font-size: 0.875em;
  line-height: 1.285;
}

img {
  width: 100%;
}

figure {
  margin: 0;
}

address {
  font-style: normal;
}

.content-wrapper {
 /* outline: 3px dotted red;*/
  width: 90%;
  margin: 50px 0;
}

/* -------------------- Base Header - Footer Styles ------------------- */

header {
  display: flex;
  justify-content: center;
  padding: 15px 0;
  background-color: #202322;
}

header .content-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  margin: 0;
}

header figure {
  width: 60%;
}

.header-divider {
  width: 100%;
  height: 1px;
  padding: 10px 0;
  margin: 10px 0 20px 0;
  border-bottom: 1px solid #3a3a3a;
}

header nav {
  width: 60%;
  font-size: 1.125em;
  font-weight: 700;
  text-transform: uppercase;
}

header nav ul {
  display: flex;
  justify-content: space-around;
  width: 100%;
}

header nav ul li {
  font-size: 1.125em;
}

footer {
display: flex;
flex-direction: column;
align-items: center;
text-align: center;
background-color: #202322;
}

footer p {
  margin: 0;
}

footer .content-wrapper {
  width: 55%;
  margin: 50px 0 20px 0;
}

footer .contact,
footer .social {
  margin-bottom: 50px;
}

footer .social-icons {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

footer .social-icons p {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.3125em;
  background-color: #527158;
  border-radius: 50%;
  width: 40px;
  height: 40px;
}


footer .copyright {
  margin: 20px 0;
}

/* -------------------- Mobile Styles - Homepage -------------------- */

/* Hero Area */

.hero-area {
  display: flex;
  justify-content: center;
  background: url('../img/unplugged-retreat.jpg') center no-repeat #2a423a;
  background-size: cover;
  height: 500px;
}

.hero-area h1 {
    font-family: 'Poppins', 'Helvetica', 'Arial', sans-serif;
    font-size: 2.25em;
    line-height: 1.2;
    font-weight: 500;
  }

/* Aside */

aside {
  display: flex;
  justify-content: center;
  background-color: #527158;
}

aside .form {
  margin-top: 30px;
}

input[type=text] {
  box-sizing: border-box;
  width: 100%;
  color: #2a423a;
  font-style: italic;
  padding: 1em;
  font-size: 1.125em;
  font-weight: 500;
}
 
input[type=button] {
  width: 100%;
  padding: 20px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3ed;
  border: none;
  text-align: center;
  text-transform: uppercase;
}

/* Features */

.features {
  display: flex;
  justify-content: center;
  background: url('../img/unplugged-retreat-features.jpg') center no-repeat #202322;
  background-size: cover;
}

.features h2 {
  margin-bottom: 60px; 
}

.features .features-items {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-flow: row wrap;
}

.features .fontawesome-icon {
  font-size: 3.75em;
  margin-bottom: 40px;
  text-align: center;
}

.features article {
  width: 63%;
  margin: 30px 0;
}

.features p {
  margin: 0;
  text-align: center;
}

/* Reviews */

.reviews {
  display: flex;
  justify-content: center;
  background-color: #2a423a;
}

.reviews h2 {
  margin-bottom: 40px;
  line-height: 1;
}

.reviews h3 {
  width: 55%;
}

/* ============================ About Page ============================== */

.mission {
  display: flex;
  justify-content: center;
  background-color: #527158;
}

.map figure {
  width: 100%;
  height: 0;
  padding-bottom: 125%;
  overflow: hidden;
  position: relative;
}

.map iframe {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
  
.contact-section {
  display: flex;
  justify-content: center;
  background-color: #2a423a;
}

.contact-content p {
  margin: 0;
}

/* ============================ FAQ Page ================================ */

.faq {
  display: flex;
  justify-content: center;
  background-color: #527158;
}

.faq .content-wrapper {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-flow: row wrap;
  margin: 50px 0 0 0;
}

.faq h2 {
  margin: 40px 0;
  line-height: 1;
}

.faq-content {
  margin-bottom: 50px;
}

.faq-content h4 {
  line-height: 1.33 ;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden,
[hidden] {
  display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
 * Extends the .sr-only class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
  visibility: hidden;
}
/* ... */

